# irpak

./: .gitignore  CMakeLists.txt  build.bat  vcpkg.json
include/: AudioPackager.hpp  Encryption.hpp  IRProcessor.hpp  JuceHeader.hpp
src/: AudioPackager.cpp  Encryption.cpp  IRProcessor.cpp  main.cpp
